tests/baselines/reference/checkJsdocTypeTagOnExportAssignment6.errors.txt
a.js(8,30): error TS2353: Object literal may only specify known properties, and 'c' does not exist in type 'Foo'.


==== checkJsdocTypeTagOnExportAssignment6.js (0 errors) ====
    
==== a.js (1 errors) ====
    /**
     * @typedef {Object} Foo
     * @property {number} a
     * @property {number} b
     */
    
    /** @type {Foo} */
    export default { a: 1, b: 1, c: 1 };
                                 ~
!!! error TS2353: Object literal may only specify known properties, and 'c' does not exist in type 'Foo'.
    
==== b.js (0 errors) ====
    import a from "./a";
    a;
    